[package]
name = "zino-example"
version = "0.1.0"
edition = "2024"

[dependencies]
zino = { version = "0.37", features = ["axum"] }
zino-core = { version = "0.37", features = ["apalis"] }
apalis = { version = "0.7.2", features = ["catch-panic", "retry", "limit"] }
apalis-cron = { version = "0.7.2" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dependencies.tracing]
default-features = false
version = "0.1"
